--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "bootstrap": "^4.5.3",
     "express": "^4.17.1",
     "firebase": "^8.0.2",
     "path": "^0.12.7",
