--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
     "firebase": "^8.0.2",
+    "jquery": "^3.5.1",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.10.1",
     "tslib": "^2.0.0",
     "typescript": "~4.0.2",
     "zone.js": "~0.10.2"
